--- a/views/default/register.html
+++ b/views/default/register.html
@@ -311,7 +311,7 @@
 							required : 'Escriba sus apellidos'
 						},
 						gender : {
-							required : 'Please select your gender'
+							required : 'Selecciona'
 						},
 						terms : {
 							required : 'Debe aceptar los términos y condiciones'
