Boton seleccionado al dar tab en asientos

--- a/views/layout.html
+++ b/views/layout.html
@@ -606,7 +606,7 @@ header,h1,h2,h3,h4{
                                 <a href="javascript:void(0)" disabled='disabled'>
                                 {{pass}}
 									<i class="fa fa-lg fa-fw  fa-plus-square"></i>
-									Agregar pólizas
+									Ver pólizas
 								</a>
 							</li>
                             <li>
