--- a/views/configuracion/wizard_reportes.html
+++ b/views/configuracion/wizard_reportes.html
@@ -2,26 +2,7 @@
 
 <link href="{{=URL('static', 'chosen/chosen.css')}}" rel="stylesheet">
 <script>
-    $(function() {
-        
-        /*
-        $('#sel_tipo_cuentas').on('change', function (e) {
-
-            tipo_cuentas=$(this).val();
-            if (tipo_cuentas!='0'){
-                //$( "#div_cat_cuentas" ).load( '{{=URL('ul_list2')}}', { tipo_cuentas: tipo_cuentas });
-            }
-        });
-
-        $(document).ready(function(){
-            $('tr')
-            .filter(function() {
-                return this.id.match(/\d./);
-            }).hide();
-
-        });
-        */
-});
+   
 
 </script>
 <style>
@@ -55,7 +36,7 @@ table > tbody > tr:hover{
 <section id="widget-grid" class="">
    <!-- row -->
    <div class="row">
-      <article class="col-sm-12">
+      <article class="col-sm-6">
          <!-- new widget -->
          <div class="jarviswidget" id="wid-id-0" data-widget-togglebutton="false" data-widget-editbutton="false" data-widget-fullscreenbutton="false" data-widget-colorbutton="false" data-widget-deletebutton="false">
             <header>
@@ -229,14 +210,11 @@ table > tbody > tr:hover{
                                           </select>
                                        </div>   
                                     </div>
-                                    <div class="fila">
-                                       <div class="cell">
-                                       </div>
-                                       <div class="cell">
-                                          <input type="submit" value="Enviar">
-                                       </div>
-                                    </div>
                                  </div>
+                                  <footer>
+                                        <button class="btn btn-primary" type="submit"> Crear Reporte </button>
+                                        <button class="btn btn-default" onclick="window.history.back();" type="button"> Regresar </button>
+                                    </footer>
                               </form>
                            </ul>
                         </div>
@@ -250,14 +228,94 @@ table > tbody > tr:hover{
          </div>
          <!-- end widget -->
       </article>
-   </div>
+       
+       <article class="col-sm-6">
+         <!-- new widget -->
+         <div class="jarviswidget" id="wid-id-elimina-reportes" data-widget-togglebutton="false" data-widget-editbutton="false" data-widget-fullscreenbutton="false" data-widget-colorbutton="false" data-widget-deletebutton="false">
+            <header>
+               <span class="widget-icon"> <i class="fa fa-cog txt-color-darken"></i> </span>
+               <h2>Administrar reportes:</h2>
+            </header>
+            <!-- widget div-->
+            <div>
+                <div class="jarviswidget-editbox"></div>
+                    <div class="widget-body">
+                        <form class="">
+                            <header> Reportes Creados:  </header>
+                            <fieldset>
+                                 {{for reporte in reportes:}}
+                                <div class="row">
+                                    <div class="smart-form">
+                                    <section class="col col-6">
+                                        
+                                            <label class="toggle">
+                                                <input type="checkbox" class="estatus" id="chk-{{=reporte.id}}" data-id="{{=reporte.id}}" name="checkbox-activo" value="{{=reporte.descripcion}}"
+                                                       {{if reporte.estatus==1:}}
+                                                        checked
+                                                       {{pass}}
+                                                       >
+                                            <i data-swchoff-text="OFF" data-swchon-text="ON"></i>
+                                            {{=reporte.descripcion}}
+                                            </label>
+                                        
+                                    </section>
+                                    </div>
+                                    <section class="col col-6">
+                                        <button type="button" id="eliminar-{{=reporte.id}}" data-id="{{=reporte.id}}" class="eliminar btn btn-labeled btn-danger" value="{{=reporte.descripcion}}">
+                                         <span class="btn-label">
+                                          <i class="glyphicon glyphicon-trash"></i>
+                                         </span>Eliminar
+                                         </button>
+                                        
+                                        
+                                        <button type="button" id="ver-{{=reporte.id}}" data-id="{{=reporte.id}}" class="ver btn btn-labeled btn-primary" value="{{=reporte.descripcion}}"  onClick="location.href='{{=URL('reportes','reportes_creados?reporte_id='+str(reporte.id))}}'">
+                                         <span class="btn-label">
+                                          <i class="glyphicon glyphicon-zoom-in"></i>
+                                         </span>Ver Reporte
+                                     </button>
+                                    </section>
+                                    
+                                  </div>
+                                
+                                  {{pass}}   
+                            </fieldset>
+                               
+                        </form>
+                        
+                    </div>
+                </div>
+             </div>
+       </article>
+    </div>
+                    
    <!-- end row -->
-</section>
+    
+</section> 
 <!-- end widget grid -->
 
 <script src="{{=URL('static', 'chosen/chosen.jquery.js')}}" type="text/javascript"></script>
 
   <script type="text/javascript">
+   $(function() {
+        pageSetUp();
+        /*
+        $('#sel_tipo_cuentas').on('change', function (e) {
+
+            tipo_cuentas=$(this).val();
+            if (tipo_cuentas!='0'){
+                //$( "#div_cat_cuentas" ).load( '{{=URL('ul_list2')}}', { tipo_cuentas: tipo_cuentas });
+            }
+        });
+
+        $(document).ready(function(){
+            $('tr')
+            .filter(function() {
+                return this.id.match(/\d./);
+            }).hide();
+
+        });
+        */
+    
       {{if tipo_msg=='error':}}
           $('#div_error').removeClass("alert-success").addClass("alert-warning")
           $('#div_error').delay(2000).fadeIn(2000);
@@ -267,4 +325,86 @@ table > tbody > tr:hover{
       {{pass}}
       
         $(".chosen-select").chosen({no_results_text:'Ningun resultado!'});
+      
+       $('.estatus').click(function(){
+        var chk = $(this).attr('id');
+        var valor = $(this).attr('value');
+        var row = $(this).data('id');
+        
+        if ( $(this).is(':checked')  ){
+            var url = "{{=URL('configuracion','habilitar_reporte')}}";
+            var msg = "¿Desea habilitar el reporte "+valor+"?"
+            var txt = "Habilitado"
+        }else{
+            var url = "{{=URL('configuracion','deshabilitar_reporte')}}";
+            var msg = "¿Desea deshabilitar el reporte "+valor+"?"
+            var txt = "Deshabilitado"
+        }
+        $.SmartMessageBox({
+            title : msg,
+            content : 'Mensaje de confirmación',
+            buttons : '[No][Sí]'
+        }, function(ButtonPressed) {
+            if (ButtonPressed === "Sí") {
+                $.ajax({
+                        data:  { reporte_id : row },
+                        url:   url,
+                        type:  'post',
+                        success:  function (response) {
+                                $.smallBox({
+                                    title : "Reporte "+txt+" con éxito",
+                                    content : "<i class='fa fa-clock-o'></i> <i>Operación realizada</i>",
+                                    color : "#659265",
+                                    iconSmall : "fa fa-check fa-2x fadeInRight animated",
+                                    timeout : 4000
+                                });
+                            $('.txt-'+row).html(txt);//Cambiar el nombre del estatus
+                        }
+                });
+            }
+            if (ButtonPressed === "No") {
+                    if ( $("#"+chk).is(':checked')  ){
+                        document.getElementById(chk).checked = false;
+                    }else{
+                        document.getElementById(chk).checked = true;
+                    }
+            }
+        });
+    });
+    $('.eliminar').click(function(){
+        var chk = $(this).attr('id');
+        var valor = $(this).attr('value');
+        var row = $(this).data('id');
+       
+        var url = "{{=URL('configuracion','eliminar_reporte')}}";
+        var msg = "¿Desea eliminar el reporte "+valor+"?"
+        var txt = "Eliminado"
+       
+        $.SmartMessageBox({
+            title : msg,
+            content : 'Con esta acción eliminará permanentemente el reporte',
+            buttons : '[No][Sí]'
+        }, function(ButtonPressed) {
+            if (ButtonPressed === "Sí") {
+                $.ajax({
+                        data:  { reporte_id : row },
+                        url:   url,
+                        type:  'post',
+                        success:  function (response) {
+                                $.smallBox({
+                                    title : "Reporte "+txt+" con éxito",
+                                    content : "<i class='fa fa-clock-o'></i> <i>Operación realizada</i>",
+                                    color : "#659265",
+                                    iconSmall : "fa fa-check fa-2x fadeInRight animated",
+                                    timeout : 4000
+                                });
+                            $('.txt-'+row).html(txt);//Cambiar el nombre del estatus
+                            window.location.href = "{{=URL('configuracion','wizard_reportes')}}";
+                        }
+                    
+                });
+            }
+        });
+    });
+  });
   </script>
