--- a/static/smartadmin/css/smartadmin-skins.css
+++ b/static/smartadmin/css/smartadmin-skins.css
@@ -11,7 +11,15 @@
 
 .smart-style-1 #header {
 	background-image:none;
-	background-color:#22262e;
+	/*background-color:#22262e;*/
+	background: #22262e; /* Old browsers */
+	background: -moz-linear-gradient(top,  #22262e 0%, #22262e 50%, #1b1e24 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#22262e), color-stop(50%,#22262e), color-stop(100%,#1b1e24)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #22262e 0%,#22262e 50%,#1b1e24 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #22262e 0%,#22262e 50%,#1b1e24 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #22262e 0%,#22262e 50%,#1b1e24 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #22262e 0%,#22262e 50%,#1b1e24 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#22262e', endColorstr='#1b1e24',GradientType=0 ); /* IE6-9 */
 }
 
 .smart-style-1 #project-context > :first-child {
@@ -59,13 +67,13 @@ background-image: linear-gradient(to bottom, #6F7D94, #697486);
 }
 
 .smart-style-1 #logo-group span#activity {
-background: #0d0f12;
-border: 1px solid #0d0f12;
+/*background: #0d0f12;*/
+/*border: 1px solid #0d0f12;*/
 color:#fff;
 cursor: pointer;
 }
 .smart-style-1 .btn-header > :first-child > a {
-background: #fb3c4a;
+background: #FB2324;
 border: 1px solid #fb3c4a;
 color:#fff !important;
 cursor: pointer !important;
@@ -120,7 +128,7 @@ cursor: pointer !important;
 .smart-style-1 aside,
 .smart-style-1 .superbox-show,
 .smart-style-1 .inbox-footer  {
-background: #1b1e24;
+background: #1B1E24;
 }
 .smart-style-1 .superbox-list.active:before {
 	color: #1b1e24;
@@ -129,7 +137,7 @@ background: #1b1e24;
 
 
 .smart-style-1 #logo-group {
-background:#22262e !important;
+/*background:#22262e !important;*/
 }
 
 .smart-style-1 .login-info span, .smart-style-1 .login-info {
