--- a/views/periodo/index.html
+++ b/views/periodo/index.html
@@ -50,6 +50,7 @@
                                     </div>                                    
                                 </div>
                                 <div class="col-md-offset-9">
+                                    {{form.element(_type='submit')['_class']='btn btn-primary'}}                        
                                     {{=form.custom.submit}}
                                 </div>
                             {{=form.custom.end}}
