--- a/views/reportes/reportes_creados.html
+++ b/views/reportes/reportes_creados.html
@@ -99,10 +99,10 @@
                                         				  </div>
                                         				</label>
                                     			      </section>
-                                                       <footer>
-                                        <button class="btn btn-primary" type="submit"> Buscar </button>
-                                        <button class="btn btn-default" onclick="location.href='{{=URL('reportes','libro_diario')}}'" type="button"> Limpiar </button>
-                                                    </footer>    
+                                                       <section>
+					                                        <button class="btn btn-primary" type="submit"><i class='fa fa-search'></i> Buscar </button>
+					                                        <button class="btn btn-default" onclick="location.href='{{=URL('reportes','libro_diario')}}'" type="button"> Limpiar </button>
+                                                    	</section> 
                                     			    </fieldset>
                                     			</div>
                                     	    </div>
