Botones en los filtros

--- a/views/configuracion/wizard_reportes.html
+++ b/views/configuracion/wizard_reportes.html
@@ -211,10 +211,10 @@ table > tbody > tr:hover{
                                        </div>   
                                     </div>
                                  </div>
-                                  <footer>
+                                  <section>
                                         <button class="btn btn-primary" type="submit"> Crear Reporte </button>
                                         <button class="btn btn-default" onclick="window.history.back();" type="button"> Regresar </button>
-                                    </footer>
+                                  </section>
                               </form>
                            </ul>
                         </div>
