--- a/views/poliza/importar_polizas.html
+++ b/views/poliza/importar_polizas.html
@@ -54,7 +54,7 @@
                      <div class="row">
                         <div class="col-md-6">                           
                            <button class="btn btn-default" onclick={{=URL('poliza','importar_polizas')}}> Cancelar </button>
-                           <input class="btn btn-primary" type="submit" value="Cargar">
+                            <button class="btn btn-primary" type="submit" >Cargar</button>
                         </div>
                      </div>
                   </form>
