--- a/views/reportes/balanza.html
+++ b/views/reportes/balanza.html
@@ -96,8 +96,8 @@ table > tbody > tr:hover{
                                         				  </div>
                                         				</label>
                                     			      </section>
-                                        			      <input type="submit" value="Buscar">
-                                        			      <button class="btn btn-default" type="button" onclick="location.href='{{=URL('reportes','libro_diario')}}'"> Limpiar </button>
+                                                 <button type="submit" class="btn btn-primary" >Buscar</button>
+                                        			      <button class="btn btn-default" type="button" onclick="location.href='{{=URL('reportes','balanza')}}'"> Limpiar </button>
                                     			    </fieldset>
                                     			</div>
                                     	    </div>
