--- a/views/reportes/libro_diario.html
+++ b/views/reportes/libro_diario.html
@@ -203,7 +203,7 @@
 												    </section>												     
 												</fieldset>
 												<fieldset class="col-sm-12 col-md-12 col-lg-4">
-												    <input type="submit" value="Buscar">
+                                                    <button class="btn btn-primary" type="submit">Buscar</button>
 												    <button class="btn btn-default" type="button" onclick="location.href='{{=URL('reportes','libro_diario')}}'"> Limpiar </button>
 												</fieldset>
 										  	</div>
