Estilo -> Importacion de pólizas listo

--- a/views/poliza/listar.html
+++ b/views/poliza/listar.html
@@ -216,7 +216,7 @@ $(document).ready(function(){
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <legend>
-            <h1>
+            <h1 class="txt-color-darken">
                 <p>
                     <i class="fa-fw fa fa-file-text-o"></i>
                     Pólizas contables
