--- a/views/reportes/libro_diario.html
+++ b/views/reportes/libro_diario.html
@@ -27,7 +27,7 @@
 <div class="row">
 	<article class='col-xs-12 col-sm-12 col-md-12 col-lg-12'>
 		<legend>
-			<h1>
+			<h1 class="txt-color-darken">
 				<p>
 					<i class="fa-fw fa fa-book"></i>
 					Libro diario
