--- a/views/default/empresa.html
+++ b/views/default/empresa.html
@@ -5,7 +5,7 @@
 <div class="row">
 	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 		<legend>
-			<h1>
+			<h1 class="txt-color-darken">
 				<i class="fa-fw fa fa-building"></i>
 				Empresa {{=nombre.razon_social}}
 			</h1>
