--- a/views/layout.html
+++ b/views/layout.html
@@ -752,7 +752,11 @@ select{
 		<script src="{{=URL('static/smartadmin','js/plugin/flot/jquery.flot.cust.js')}}"></script>
 		<script src="{{=URL('static/smartadmin','js/plugin/flot/jquery.flot.resize.js')}}"></script>
 		<script src="{{=URL('static/smartadmin','js/plugin/flot/jquery.flot.tooltip.js')}}"></script>
-
+        
+        <!-- Morris Chart Dependencies -->
+        <script src="{{=URL('static/smartadmin','js/plugin/morris/morris.min.js')}}"></script>
+        <script src="{{=URL('static/smartadmin','js/plugin/morris/raphael.2.1.0.min.js')}}"></script>
+        
 		<!-- Vector Maps Plugin: Vectormap engine, Vectormap language -->
 		<script src="{{=URL('static/smartadmin','js/plugin/vectormap/jquery-jvectormap-1.2.2.min.js')}}"></script>
 		<script src="{{=URL('static/smartadmin','js/plugin/vectormap/jquery-jvectormap-world-mill-en.js')}}"></script>
