--- a/views/default/empresa.html
+++ b/views/default/empresa.html
@@ -14,91 +14,82 @@
 </div>
 <div class="row">
 	<!-- NEW WIDGET START -->
-	<article class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+	<article class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+<!-- Widget ID (each widget will need unique ID)-->
+							<div class="jarviswidget" id="wid-id-pastel" data-widget-editbutton="false">
+								<!-- widget options:
+								usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
+								data-widget-colorbutton="false"
+								data-widget-editbutton="false"
+								data-widget-togglebutton="false"
+								data-widget-deletebutton="false"
+								data-widget-fullscreenbutton="false"
+								data-widget-custombutton="false"
+								data-widget-collapsed="true"
+								data-widget-sortable="false"
+								-->
+								<header>
+									<span class="widget-icon"> <i class="fa fa-bar-chart-o"></i> </span>
+									<h2>Gráfica de Balance</h2>
+								</header>
+								<!-- widget div-->
+								<div>
+									<!-- widget edit box -->
+									<div class="jarviswidget-editbox">
+										<!-- This area used as dropdown edit box -->
+									</div>
+									<!-- end widget edit box -->
+									<!-- widget content -->
+									<div class="widget-body no-padding">
+										<div id="donut-graph" class="chart no-padding"></div>
+									</div>
+									<!-- end widget content -->
+								</div>
+								<!-- end widget div -->
+							</div>
+    <!-- end widget -->
 
-		<!-- Widget ID (each widget will need unique ID)-->
-		<div class="jarviswidget" id="wid-id-2" data-widget-editbutton="false">
-			<header role='heading'>
-				<div class="jarviswidget-ctrls" role="menu">
-				</div>
-				<span class="widget-icon"> <i class="fa fa-bar-chart-o"></i> </span>
-				<h2>Estado de resultados</h2>
-			</header>
-			<!-- widget div-->
-			<div>
-				<!-- widget edit box -->
-				<div class="jarviswidget-editbox">
-					<!-- This area used as dropdown edit box -->
-				</div>
-				<!-- end widget edit box -->
-				<!-- widget content -->
-				<div class="widget-body no-padding">
-					<div id="updating-chart" class="chart"></div>
-				</div>
-				<!-- end widget content -->
-			</div>
-			<!-- end widget div -->
-		</div>
-		<!-- end widget -->
-	</article>
-	<!-- WIDGET END -->
-</div>
-<!-- row -->
-<div class="row">
-
-	<!-- NEW WIDGET START -->
-	<article class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-
-		<!-- Widget ID (each widget will need unique ID)-->
-		<div class="jarviswidget" id="wid-id-7" data-widget-editbutton="false">
-			<header>
-				<span class="widget-icon"> <i class="fa fa-bar-chart-o"></i> </span>
-				<h2>Activos/Pasivos</h2>
-			</header>
-			<!-- widget div-->
-			<div>
-				<!-- widget edit box -->
-				<div class="jarviswidget-editbox">
-					<!-- This area used as dropdown edit box -->
-				</div>
-				<!-- end widget edit box -->
-				<!-- widget content -->
-				<div class="widget-body no-padding">
-					<div id="site-stats" class="chart has-legend"></div>
-				</div>
-				<!-- end widget content -->
-			</div>
-			<!-- end widget div -->
-		</div>
-		<!-- end widget -->							
+		
 	</article>
 	<!-- WIDGET END -->
 	<!-- NEW WIDGET START -->
-	<article class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+	<article class="col-xs-6 col-sm-12 col-md-6 col-lg-6">
 		<!-- Widget ID (each widget will need unique ID)-->
-		<div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
-			<header>
-				<span class="widget-icon"> <i class="fa fa-bar-chart-o"></i> </span>
-				<h2>Balanza</h2>
-			</header>
-			<!-- widget div-->
-			<div>
-				<!-- widget edit box -->
-				<div class="jarviswidget-editbox">
-					<!-- This area used as dropdown edit box -->
-				</div>
-				<!-- end widget edit box -->
-				<!-- widget content -->
-				<div class="widget-body no-padding">
-					<div id="bar-chart" class="chart"></div>
-				</div>
-				<!-- end widget content -->
-			</div>
-			<!-- end widget div -->
-		</div>
-		<!-- end widget -->
+							<div class="jarviswidget" id="wid-id-3" data-widget-editbutton="false">
+								<!-- widget options:
+								usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
+								data-widget-colorbutton="false"
+								data-widget-editbutton="false"
+								data-widget-togglebutton="false"
+								data-widget-deletebutton="false"
+								data-widget-fullscreenbutton="false"
+								data-widget-custombutton="false"
+								data-widget-collapsed="true"
+								data-widget-sortable="false"
+								-->
+								<header>
+									<span class="widget-icon"> <i class="fa fa-bar-chart-o"></i> </span>
+									<h2>Ventas - Costos - Gastos</h2>
+								</header>
+								<!-- widget div-->
+								<div>
+									<!-- widget edit box -->
+									<div class="jarviswidget-editbox">
+										<!-- This area used as dropdown edit box -->
+									</div>
+									<!-- end widget edit box -->
+									<!-- widget content -->
+									<div class="widget-body no-padding">
+										<div id="normal-bar-graph" class="chart no-padding"></div>
+									</div>
+									<!-- end widget content -->
+								</div>
+								<!-- end widget div -->
+							</div>
+							<!-- end widget -->
 	</article>
 	<!-- WIDGET END -->
+	
 </div>
 <!-- end row -->
 <script>
@@ -341,8 +332,47 @@
 					});
 
 				}
-
+    
 				/* end bar chart */
+                // donut
+				if ($('#donut-graph').length) {
+					Morris.Donut({
+						element : 'donut-graph',
+						data : [{
+                            value : {{=lista[0] if lista[0] else 0}},
+							label : 'ACTIVO'
+						}, {
+                            value : {{=lista[1] if lista[1] else 0}},
+							label : 'PASIVO'
+						}, {
+							value : {{=lista[2] if lista[2] else 0}},
+							label : 'CAPITAL'
+						}],
+						formatter : function(x) {
+							return '$ '+ x
+						}
+					});
+				}
+                          
+               // Use Morris.Bar
+				if ($('#normal-bar-graph').length) {
+
+					Morris.Bar({
+						element : 'normal-bar-graph',
+						data : [{
+							x : 'Actual',
+                            ventas : {{=lista[3] if lista[0] else 0}},
+                            costos : {{=lista[4] if lista[1] else 0}},
+                            gastos : {{=lista[5] if lista[2] else 0}},
+						}],
+						xkey : 'x',
+						ykeys : ['ventas', 'costos', 'gastos'],
+						labels : ['Ventas', 'Costos', 'Gastos']
+					});
+
+				}
 
 			});
+    
+         
 </script>
