--- a/views/reportes/cc_grid2.html
+++ b/views/reportes/cc_grid2.html
@@ -1,3 +1,85 @@
 {{extend 'layout.html'}}
-<h1>Esta es la plantilla reportes/cc_grid2.html</h1>
+
+<!-- Widget ID (each widget will need unique ID)-->
+							<div class="jarviswidget" id="wid-id-pastel" data-widget-editbutton="false">
+								<!-- widget options:
+								usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
+
+								data-widget-colorbutton="false"
+								data-widget-editbutton="false"
+								data-widget-togglebutton="false"
+								data-widget-deletebutton="false"
+								data-widget-fullscreenbutton="false"
+								data-widget-custombutton="false"
+								data-widget-collapsed="true"
+								data-widget-sortable="false"
+
+								-->
+								<header>
+									<span class="widget-icon"> <i class="fa fa-bar-chart-o"></i> </span>
+									<h2>Gráfica de Balance</h2>
+
+								</header>
+
+								<!-- widget div-->
+								<div>
+
+									<!-- widget edit box -->
+									<div class="jarviswidget-editbox">
+										<!-- This area used as dropdown edit box -->
+
+									</div>
+									<!-- end widget edit box -->
+
+									<!-- widget content -->
+									<div class="widget-body no-padding">
+
+										<div id="donut-graph" class="chart no-padding"></div>
+
+									</div>
+									<!-- end widget content -->
+
+								</div>
+								<!-- end widget div -->
+
+							</div>
+							<!-- end widget -->
+
 {{=cc_empresa}}
+
+<script type="text/javascript">
+			// PAGE RELATED SCRIPTS
+
+			/*
+			 * Run all morris chart on this page
+			 */
+			$(document).ready(function() {
+				
+				// DO NOT REMOVE : GLOBAL FUNCTIONS!
+                pageSetUp();
+                
+                // donut
+				if ($('#donut-graph').length) {
+					Morris.Donut({
+						element : 'donut-graph',
+						data : [{
+                            value : {{=lista[0] if lista[0] else 0}},
+							label : 'ACTIVO'
+						}, {
+                            value : {{=lista[1] if lista[1] else 0}},
+							label : 'PASIVO'
+						}, {
+							value : {{=lista[2] if lista[2] else 0}},
+							label : 'CAPITAL'
+						}],
+						formatter : function(x) {
+							return '$ '+ x
+						}
+					});
+				}
+                
+                
+            });
+                              
+
+</script>
